@@ -4,15 +4,14 @@ import model.Status;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
+
 import java.net.http.HttpRequest;
-import java.net.SocketException;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpResponse;
+
 import static org.junit.jupiter.api.Assertions.*;
+
 import service.TaskManager;
 import service.InMemoryTaskManager;
 import model.Task;
@@ -48,105 +47,56 @@ public class HttpTaskManagerTest {
 
 
     @Test
-    public void testAddTask() throws IOException {
-        try {
-            URL url = new URL("http://localhost:8080/tasks");
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("POST");
-            connection.setDoOutput(true);
-            connection.setRequestProperty("Content-Type", "application/json");
+    public void testAddTask() throws IOException, InterruptedException {
+        URI url = URI.create("http://localhost:8080/tasks");
 
-            String jsonInputString = "{\"title\":\"New Task\",\"description\":\"Task description\"}";
-            try (OutputStream os = connection.getOutputStream()) {
-                byte[] input = jsonInputString.getBytes("utf-8");
-                os.write(input, 0, input.length);
-            }
+        // Сериализация задачи
+        String taskJson = gson.toJson(new Task(
+                "Новая задача",
+                "Описание задачи",
+                Status.NEW,
+                Duration.ofMinutes(90),
+                LocalDateTime.of(2024, 8, 15, 10, 0)
+        ));
 
-            int code = connection.getResponseCode();
-            if (code == HttpURLConnection.HTTP_OK) {
-            } else {
-                System.out.println("Response code: " + code);
-            }
+        System.out.println("Отправляемый JSON: " + taskJson);
 
-        } catch (SocketException e) {
-            System.out.println("SocketException: " + e.getMessage());
-        } catch (IOException e) {
-            System.out.println("IOException: " + e.getMessage());
-        }
+        HttpClient client = HttpClient.newBuilder()
+                .connectTimeout(Duration.ofSeconds(20))
+                .build();
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(url)
+                .header("Content-Type", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(taskJson))
+                .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+        assertEquals(200, response.statusCode(), "Статус код должен быть 200");
+        assertTrue(response.body().contains("Новая задача"), "Ответ должен содержать заголовок задачи");
+
     }
 
 
     @Test
     public void testGetTasks() throws IOException, InterruptedException {
-        // Настройка объектов задач
-        Task task1 = new Task("Task 1", "Description 1", Status.NEW, Duration.ofHours(1), LocalDateTime.now());
-        Task task2 = new Task("Task 2", "Description 2", Status.NEW, Duration.ofHours(2), LocalDateTime.now().plusDays(1));
 
-        // Сериализация задач
-        Gson gson = new GsonBuilder()
-                .registerTypeAdapter(Duration.class, new DurationAdapter())
-                .registerTypeAdapter(LocalDateTime.class, new LocalDateTimeAdapter())
-                .create();
-
-        String task1Json = gson.toJson(task1);
-        String task2Json = gson.toJson(task2);
-
-        // Отправка POST-запросов на добавление задач
-        URI taskUri = URI.create("http://localhost:8080/tasks");
+        manager.addTask(new Task("Task 1", "Description 1", model.Status.NEW, Duration.ofMinutes(30), LocalDateTime.now()));
+        manager.addTask(new Task("Task 2", "Description 2", model.Status.NEW, Duration.ofMinutes(45), LocalDateTime.now()));
 
         HttpClient client = HttpClient.newHttpClient();
-
-        try {
-            HttpRequest task1HttpRequest = HttpRequest.newBuilder()
-                    .uri(taskUri)
-                    .POST(HttpRequest.BodyPublishers.ofString(task1Json))
-                    .header("Content-Type", "application/json")
-                    .build();
-
-            HttpResponse<String> response1 = client.send(task1HttpRequest, HttpResponse.BodyHandlers.ofString());
-
-            HttpRequest task2HttpRequest = HttpRequest.newBuilder()
-                    .uri(taskUri)
-                    .POST(HttpRequest.BodyPublishers.ofString(task2Json))
-                    .header("Content-Type", "application/json")
-                    .build();
-
-            HttpResponse<String> response2 = client.send(task2HttpRequest, HttpResponse.BodyHandlers.ofString());
-
-            // Проверяем статус для первого запроса
-            if (response1.statusCode() != 200) {
-                System.err.println("Ошибка при добавлении задачи 1: " + response1.body());
-            }
-
-            // Проверяем статус для второго запроса
-            if (response2.statusCode() != 200) {
-                System.err.println("Ошибка при добавлении задачи 2: " + response2.body());
-            }
-
-        } catch (IOException e) {
-            System.out.println("HTTP: " + e.getMessage());
-            return;
-        }
-
-        // Получение задач
         URI url = URI.create("http://localhost:8080/tasks");
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(url)
                 .GET()
                 .build();
 
-        HttpResponse<String> response;
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        try {
-            response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-            // Проверка результатов
-            assertEquals(200, response.statusCode());
-            assertTrue(response.body().contains("Task 1"));
-            assertTrue(response.body().contains("Task 2"));
-        } catch (IOException e) {
-            System.err.println("Ошибка при получении задач: " + e.getMessage());
-        }
+        assertEquals(200, response.statusCode());
+        assertTrue(response.body().contains("Task 1"));
+        assertTrue(response.body().contains("Task 2"));
     }
 
 
@@ -163,5 +113,80 @@ public class HttpTaskManagerTest {
         assertEquals(200, response.statusCode());
         assertNull(manager.getTaskById(task.getId()), "Задача не была удалена");
     }
+
+
+//    @Test
+//    public void testGetTasks() throws IOException, InterruptedException {
+//        // Настройка объектов задач
+//        Task task1 = new Task("Task 1", "Description 1", Status.NEW, Duration.ofHours(1), LocalDateTime.now());
+//        Task task2 = new Task("Task 2", "Description 2", Status.NEW, Duration.ofHours(2), LocalDateTime.now().plusDays(1));
+//
+//        // Сериализация задач
+//        Gson gson = new GsonBuilder()
+//                .registerTypeAdapter(Duration.class, new DurationAdapter())
+//                .registerTypeAdapter(LocalDateTime.class, new LocalDateTimeAdapter())
+//                .create();
+//
+//        String task1Json = gson.toJson(task1);
+//        String task2Json = gson.toJson(task2);
+//
+//        // Отправка POST-запросов на добавление задач
+//        URI taskUri = URI.create("http://localhost:8080/tasks");
+//
+//        HttpClient client = HttpClient.newHttpClient();
+//
+//        try {
+//            HttpRequest task1HttpRequest = HttpRequest.newBuilder()
+//                    .uri(taskUri)
+//                    .POST(HttpRequest.BodyPublishers.ofString(task1Json))
+//                    .header("Content-Type", "application/json")
+//                    .build();
+//
+//            HttpResponse<String> response1 = client.send(task1HttpRequest, HttpResponse.BodyHandlers.ofString());
+//
+//            HttpRequest task2HttpRequest = HttpRequest.newBuilder()
+//                    .uri(taskUri)
+//                    .POST(HttpRequest.BodyPublishers.ofString(task2Json))
+//                    .header("Content-Type", "application/json")
+//                    .build();
+//
+//            HttpResponse<String> response2 = client.send(task2HttpRequest, HttpResponse.BodyHandlers.ofString());
+//
+//            // Проверяем статус для первого запроса
+//            if (response1.statusCode() != 200) {
+//                System.err.println("Ошибка при добавлении задачи 1: " + response1.body());
+//            }
+//
+//            // Проверяем статус для второго запроса
+//            if (response2.statusCode() != 200) {
+//                System.err.println("Ошибка при добавлении задачи 2: " + response2.body());
+//            }
+//
+//        } catch (IOException e) {
+//            System.out.println("HTTP: " + e.getMessage());
+//            return;
+//        }
+//
+//        // Получение задач
+//        URI url = URI.create("http://localhost:8080/tasks");
+//        HttpRequest request = HttpRequest.newBuilder()
+//                .uri(url)
+//                .GET()
+//                .build();
+//
+//        HttpResponse<String> response;
+//
+//        try {
+//            response = client.send(request, HttpResponse.BodyHandlers.ofString());
+//
+//            // Проверка результатов
+//            assertEquals(200, response.statusCode());
+//            assertTrue(response.body().contains("Task 1"));
+//            assertTrue(response.body().contains("Task 2"));
+//        } catch (IOException e) {
+//            System.err.println("Ошибка при получении задач: " + e.getMessage());
+//        }
+//    }
+
 
 }
